--- a/Rock-paper-scissors.css
+++ b/Rock-paper-scissors.css
@@ -3,8 +3,9 @@
 html, body{
     background-color: #B0D7AC;
     margin: 0;
-    padding: 0;  
-}
+    padding: 0;
+    max-width: 100vw;
+ }
 * {
     box-sizing: border-box;
 }
@@ -49,7 +50,7 @@ body {
     text-align: center;
     border-radius: 5%;
     width: 150px;
-    height: 80px;
+    max-height: 80px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
